--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -98,8 +98,9 @@ a {
     } 
 
     &:hover {
-        color: $text-color;
-        // text-decoration: underline;
+        // color: $text-color;
+        // color: $brand-color-dark;
+        text-decoration: underline;
     }
 }
 
